<resources>
    <string name="app_name">ReFashioned</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_map">Shops</string>
    <string name="title_info">Info</string>
    <string name="title_advertisement">Advertisement</string>
    <string name="brand_upper">BRAND</string>
    <string name="add_to_history">Add to History</string>
    <string name="cancel">Cancel</string>
    <string name="total_score">Total Score</string>
    <string name="chart_description">The higher the score, the better the sustainability.</string>
    <string name="purchase_type">Purchase Type:</string>
    <string name="second_hand">Second Hand</string>
    <string name="first_hand">First Hand</string>
    <string name="category">Category</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="item_score">Item Score</string>
    <string name="image_fo_the_scanned_clothing">Image fo the scanned clothing.</string>
    <string name="clothing_type_upper">CLOTHING TYPE</string>
    <string name="date_upper">DATE</string>
    <string name="brand_sustainability">Brand Sustainability</string>
    <string name="score_upper">SCORE</string>
    <string name="sustainability_factor">Sustainability Factor</string>
    <string name="sustainability_factor_explanation">Based on recently acquired clothing items and the place of purchase.</string>
    <string name="factor_upper">FACTOR</string>
</resources>