<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="ch.hslu.refashioned.ui.home.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="ch.hslu.refashioned.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="ch.hslu.refashioned.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="ch.hslu.refashioned.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info_item_list" />
</navigation>