<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/scanned_image"
        android:layout_width="75dp"
        android:layout_height="110dp"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_history" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin_secondary"
            android:hint="@string/category"
            android:textAppearance="?attr/textAppearanceListItemSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:hint="Brand"
                android:layout_margin="@dimen/text_margin_secondary"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin_secondary"
                android:textStyle="bold"
                android:hint="@string/score"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin_secondary"
            android:hint="@string/date"
            android:textAppearance="?attr/textAppearanceListItemSecondary" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height" />
    </LinearLayout>
</LinearLayout>